Add filter with meaning feature and overall config