@@ -1,29 +1,34 @@
 package com.capstone2024.scss.infrastructure.data;
 
 import com.capstone2024.scss.application.advice.exeptions.NotFoundException;
+import com.capstone2024.scss.application.student.dto.AttendanceDTO;
 import com.capstone2024.scss.domain.account.entities.Account;
-import com.capstone2024.scss.domain.account.entities.LoginType;
 import com.capstone2024.scss.domain.account.entities.Profile;
-import com.capstone2024.scss.domain.account.enums.LoginMethod;
 import com.capstone2024.scss.domain.account.enums.Role;
 import com.capstone2024.scss.domain.account.enums.Status;
 import com.capstone2024.scss.domain.common.entity.Semester;
+import com.capstone2024.scss.domain.common.mapper.student.academic.StudentStudyMapper;
 import com.capstone2024.scss.domain.contribution_question_card.entities.ContributedQuestionCardCategory;
 import com.capstone2024.scss.domain.contribution_question_card.services.ContributionQuestionCardService;
-import com.capstone2024.scss.domain.counselor.entities.*;
-import com.capstone2024.scss.domain.common.utils.RandomUtil;
-import com.capstone2024.scss.domain.counseling_booking.entities.CounselingSlot;
-import com.capstone2024.scss.domain.counseling_booking.entities.Holiday;
+import com.capstone2024.scss.domain.counseling_booking.entities.counseling_appointment.AppointmentFeedback;
+import com.capstone2024.scss.domain.counseling_booking.entities.counseling_appointment.CounselingAppointment;
 import com.capstone2024.scss.domain.counseling_booking.entities.counseling_appointment.OfflineAppointment;
 import com.capstone2024.scss.domain.counseling_booking.entities.counseling_appointment.OnlineAppointment;
 import com.capstone2024.scss.domain.counseling_booking.entities.counseling_appointment.enums.CounselingAppointmentStatus;
 import com.capstone2024.scss.domain.counseling_booking.entities.counseling_appointment_request.CounselingAppointmentRequest;
+import com.capstone2024.scss.domain.counseling_booking.entities.counseling_appointment_request.enums.CounselingAppointmentRequestStatus;
+import com.capstone2024.scss.domain.counseling_booking.entities.counseling_appointment_request.enums.MeetingType;
+import com.capstone2024.scss.domain.counselor.entities.*;
+import com.capstone2024.scss.domain.common.utils.RandomUtil;
+import com.capstone2024.scss.domain.counseling_booking.entities.CounselingSlot;
+import com.capstone2024.scss.domain.counseling_booking.entities.Holiday;
 import com.capstone2024.scss.domain.counselor.entities.enums.CounselorStatus;
 import com.capstone2024.scss.domain.counselor.entities.enums.Gender;
 import com.capstone2024.scss.domain.demand.entities.DemandProblemTag;
 import com.capstone2024.scss.domain.demand.entities.ProblemCategory;
 import com.capstone2024.scss.domain.demand.entities.ProblemTag;
 import com.capstone2024.scss.domain.q_and_a.entities.QuestionCard;
+import com.capstone2024.scss.domain.q_and_a.entities.QuestionCardFeedback;
 import com.capstone2024.scss.domain.q_and_a.entities.Topic;
 import com.capstone2024.scss.domain.q_and_a.enums.QuestionCardStatus;
 import com.capstone2024.scss.domain.q_and_a.enums.QuestionType;
@@ -33,15 +38,22 @@ import com.capstone2024.scss.domain.student.entities.Major;
 import com.capstone2024.scss.domain.student.entities.Student;
 import com.capstone2024.scss.domain.notification.entities.Notification;
 import com.capstone2024.scss.domain.student.entities.StudentCounselingProfile;
+import com.capstone2024.scss.domain.student.entities.academic.StudentStudy;
 import com.capstone2024.scss.domain.student.enums.CounselingProfileStatus;
 import com.capstone2024.scss.domain.support_staff.entity.SupportStaff;
+import com.capstone2024.scss.infrastructure.configuration.application.StudentSynchronizeService;
+import com.capstone2024.scss.infrastructure.configuration.openai.OpenAIService;
 import com.capstone2024.scss.infrastructure.data.fap.dto.*;
+import com.capstone2024.scss.infrastructure.elastic_search.documents.QuestionCardDocument;
+import com.capstone2024.scss.infrastructure.elastic_search.repository.QuestionCardDocumentRepository;
 import com.capstone2024.scss.infrastructure.repositories.*;
+import com.capstone2024.scss.infrastructure.repositories._and_a.QuestionCardFeedbackRepository;
 import com.capstone2024.scss.infrastructure.repositories._and_a.QuestionCardRepository;
 import com.capstone2024.scss.infrastructure.repositories._and_a.TopicRepository;
 import com.capstone2024.scss.infrastructure.repositories.account.AccountRepository;
 import com.capstone2024.scss.infrastructure.repositories.account.LoginTypeRepository;
 import com.capstone2024.scss.infrastructure.repositories.account.ProfileRepository;
+import com.capstone2024.scss.infrastructure.repositories.booking_counseling.AppointmentFeedbackRepository;
 import com.capstone2024.scss.infrastructure.repositories.booking_counseling.CounselingAppointmentRepository;
 import com.capstone2024.scss.infrastructure.repositories.booking_counseling.CounselingAppointmentRequestRepository;
 import com.capstone2024.scss.infrastructure.repositories.booking_counseling.CounselingSlotRepository;
@@ -50,6 +62,9 @@ import com.capstone2024.scss.infrastructure.repositories.counselor.*;
 import com.capstone2024.scss.infrastructure.repositories.demand.*;
 import com.capstone2024.scss.infrastructure.repositories.student.CounselingProfileRepository;
 import com.capstone2024.scss.infrastructure.repositories.student.StudentRepository;
+import com.capstone2024.scss.infrastructure.repositories.student.academic.StudentStudyRepository;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -61,8 +76,8 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestTemplate;
 
-import javax.swing.*;
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.time.*;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -75,6 +90,9 @@ public class DatabaseSeeder implements CommandLineRunner {
     private final RestTemplate restTemplate;
     @Value("${server.api.fap.system.base.url}")
     private String fapServerUrl;
+
+    @Value("${hibernate.jdbc.batch_size}")
+    private Integer BATCH_SIZE;
 
     private final AccountRepository accountRepository;
     private final LoginTypeRepository loginTypeRepository;
@@ -104,6 +122,8 @@ public class DatabaseSeeder implements CommandLineRunner {
     private final SlotOfCounselorRepository slotOfCounselorRepository;
     private final QualificationRepository qualificationRepository;
     private final CertificationRepository certificationRepository;
+    private final StudentStudyRepository studentStudyRepository;
+    private final QuestionCardFeedbackRepository questionCardFeedbackRepository;
 
     @Override
     public void run(String... args) throws Exception {
@@ -120,13 +140,25 @@ public class DatabaseSeeder implements CommandLineRunner {
             seedSupportStaffAccount();
             seedCounselorAccounts();
             seedStudentAccounts();
+//            seedStudentStudy();
             seedStudentProblemTags();
 
             generatePromptToOpenAI("Học sinh này học quá tệ, không thường xuyên hỗ trợ làm bài tập nhóm, thường xuyên ngủ gật");
 
             seedCategories();
-            seedQuestions();
+            seedQuestionsAndAttachWithCategory();
+
+            seedStudentStudy();
+//            seedStudentStudy();
+            seedAllQuestionCards();
+            seedAppointment();
+        } else {
+//            testGetYesterday();
         }
+    }
+
+    private void testGetYesterday() {
+        studentSynchronizeService.getYesterdayDetailsWithCommentsAndSaveTag();
     }
 
     private void generatePromptToOpenAI(String prompt) {
@@ -561,7 +593,7 @@ public class DatabaseSeeder implements CommandLineRunner {
     }
 
     private void seedAdminAccount() {
-        String adminEmail = "a";
+        String adminEmail = "admin@gmail.com";
         logger.info("Checking if admin account with email '{}' exists.", adminEmail);
 
         if (accountRepository.findAccountByEmail(adminEmail).isEmpty()) {
@@ -571,7 +603,7 @@ public class DatabaseSeeder implements CommandLineRunner {
                     .email(adminEmail)
                     .role(Role.ADMINISTRATOR)
                     .status(Status.ACTIVE)
-                    .password(passwordEncoder.encode("a"))
+                    .password(passwordEncoder.encode("112233"))
                     .build();
 
             accountRepository.save(admin);
@@ -684,7 +716,7 @@ public class DatabaseSeeder implements CommandLineRunner {
                     .email(studentEmail)
                     .role(Role.STUDENT)
                     .status(Status.ACTIVE)
-                    .password(passwordEncoder.encode("s"))
+                    .password(passwordEncoder.encode("112233"))
                     .build();
 
             accountRepository.save(studentAccount);
@@ -737,7 +769,7 @@ public class DatabaseSeeder implements CommandLineRunner {
     }
 
     private void seedManagerAccount() {
-        String managerEmail = "m";
+        String managerEmail = "manager@gmail.com";
         logger.info("Checking if manager account with email '{}' exists.", managerEmail);
 
         if (accountRepository.findAccountByEmail(managerEmail).isEmpty()) {
@@ -746,7 +778,7 @@ public class DatabaseSeeder implements CommandLineRunner {
             Account manager = Account.builder()
                     .email(managerEmail)
                     .role(Role.MANAGER)
-                    .password(passwordEncoder.encode("m"))
+                    .password(passwordEncoder.encode("112233"))
                     .status(Status.ACTIVE)
                     .build();
 
@@ -773,7 +805,7 @@ public class DatabaseSeeder implements CommandLineRunner {
     }
 
     private void seedSupportStaffAccount() {
-        String supportStaffEmail = "ss";
+        String supportStaffEmail = "ss@gmail.com";
         logger.info("Checking if support staff account with email '{}' exists.", supportStaffEmail);
 
         if (accountRepository.findAccountByEmail(supportStaffEmail).isEmpty()) {
@@ -783,7 +815,7 @@ public class DatabaseSeeder implements CommandLineRunner {
                     .email(supportStaffEmail)
                     .role(Role.SUPPORT_STAFF)  // Assuming you have a SUPPORT_STAFF role
                     .status(Status.ACTIVE)
-                    .password(passwordEncoder.encode("ss"))
+                    .password(passwordEncoder.encode("112233"))
                     .build();
 
             accountRepository.save(supportStaff);
@@ -1301,6 +1333,707 @@ public class DatabaseSeeder implements CommandLineRunner {
     }
 
     @Transactional
+    private void createAIDepartmentCounselor(List<CounselingSlot> counselingSlots) {
+        Major aiMajor = majorRepository
+                .findByName("Artificial Intelligence")
+                .orElseThrow(() -> new NotFoundException("Not found AI major"));
+
+        // Tạo Female counselor - Nguyễn Thị Hồng Nhung
+        Counselor counselor1 = createAcademicCounselor(0, Gender.FEMALE, "Nguyễn Thị Hồng Nhung", aiMajor, counselingSlots, "nhungnt");
+        counselor1 = counselorRepository.findById(counselor1.getId()).get();
+
+        counselor1.setAchievements("Published a paper on 'Applications of NLP in Healthcare' in 2023.\n"
+                + "Developed a chatbot system used in hospitals to assist patients with basic medical information.");
+        counselor1.setWorkHistory("AI Researcher at Google AI (2020–Present):\n"
+                + "- Conducted research on Natural Language Processing (NLP) applications in healthcare.\n"
+                + "- Led a team to create AI-driven solutions for virtual assistants.\n\n"
+                + "AI Engineer at FPT Software (2016–2020):\n"
+                + "- Worked on implementing Machine Learning models for customer service chatbots.\n"
+                + "- Designed data pipelines to support real-time analytics.");
+        counselor1.setSpecializedSkills("Natural Language Processing (NLP)\n"
+                + "Machine Learning algorithms\n"
+                + "AI-driven chatbot development\n"
+                + "Data pipeline design.");
+        counselor1.setOtherSkills("Excellent communication skills\n"
+                + "Team collaboration\n"
+                + "Fluent in Vietnamese and English.");
+        counselor1.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("Bachelor")
+                        .fieldOfStudy("Computer Science")
+                        .institution("Vietnam National University")
+                        .yearOfGraduation(2015)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build(),
+                Qualification.builder()
+                        .degree("Ph.D.")
+                        .fieldOfStudy("Machine Learning")
+                        .institution("Massachusetts Institute of Technology (MIT)")
+                        .yearOfGraduation(2023)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+        counselor1.setCertifications(List.of(
+                Certification.builder()
+                        .name("Certified AI Specialist")
+                        .organization("AI Global Institute")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build(),
+                Certification.builder()
+                        .name("Certified NLP Engineer")
+                        .organization("DeepLearning.AI")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+
+        // Tạo Male counselor - Trần Quốc Bảo
+        Counselor counselor2 = createAcademicCounselor(0, Gender.MALE, "Trần Quốc Bảo", aiMajor, counselingSlots, "baotq");
+        counselor2 = counselorRepository.findById(counselor2.getId()).get();
+
+        counselor2.setAchievements("Developed an AI-powered medical imaging analysis system.\n"
+                + "Speaker at the 2023 International Conference on Computer Vision.");
+        counselor2.setWorkHistory("AI Scientist at VinAI Research (2021–Present):\n"
+                + "- Led projects on computer vision applications for healthcare.\n"
+                + "- Published multiple research papers in top-tier AI conferences.\n\n"
+                + "AI Research Assistant at Stanford University (2018–2021):\n"
+                + "- Contributed to research in Reinforcement Learning.\n"
+                + "- Assisted in developing AI tools for autonomous vehicles.");
+        counselor2.setSpecializedSkills("Computer Vision\n"
+                + "Reinforcement Learning\n"
+                + "Medical imaging with AI\n"
+                + "Autonomous systems.");
+        counselor2.setOtherSkills("Project management\n"
+                + "Technical writing and presentation\n"
+                + "Fluent in Vietnamese, English, and conversational Japanese.");
+        counselor2.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("Bachelor")
+                        .fieldOfStudy("Artificial Intelligence")
+                        .institution("University of Science, HCMC")
+                        .yearOfGraduation(2017)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build(),
+                Qualification.builder()
+                        .degree("Ph.D.")
+                        .fieldOfStudy("Computer Vision")
+                        .institution("Stanford University")
+                        .yearOfGraduation(2021)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+        counselor2.setCertifications(List.of(
+                Certification.builder()
+                        .name("Certified Computer Vision Expert")
+                        .organization("AI Research Society")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build(),
+                Certification.builder()
+                        .name("Certified AI Project Manager")
+                        .organization("PMI Institute")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+
+        counselorRepository.save(counselor1);
+        counselorRepository.save(counselor2);
+    }
+
+    @Transactional
+    private void createISDepartmentCounselor(List<CounselingSlot> counselingSlots) {
+        Major isMajor = majorRepository
+                .findByName("Information Security")
+                .orElseThrow(() -> new NotFoundException("Not found Information Security major"));
+
+        // Tạo Female counselor - Lê Thị Thanh Hà
+        Counselor counselor1 = createAcademicCounselor(0, Gender.FEMALE, "Lê Thị Thanh Hà", isMajor, counselingSlots, "haltt");
+        counselor1 = counselorRepository.findById(counselor1.getId()).get();
+
+        counselor1.setAchievements("Led a team to mitigate a massive DDoS attack on a government network in 2021.\n"
+                + "Developed a framework for network intrusion detection, adopted by several large enterprises.");
+        counselor1.setWorkHistory("Network Security Specialist at Viettel (2017–Present):\n"
+                + "- Designed and implemented secure network infrastructures.\n"
+                + "- Conducted threat analysis and implemented mitigation strategies.\n\n"
+                + "Cyber Threat Analyst at BKAV (2013–2017):\n"
+                + "- Monitored and responded to advanced persistent threats (APT).\n"
+                + "- Delivered cybersecurity training to technical teams.");
+        counselor1.setSpecializedSkills("Network Security\n"
+                + "Cyber Threat Hunting\n"
+                + "DDoS Mitigation\n"
+                + "Firewall Management.");
+        counselor1.setOtherSkills("Strong communication skills\n"
+                + "Team leadership\n"
+                + "Fluent in Vietnamese and English.");
+        counselor1.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("Bachelor")
+                        .fieldOfStudy("Information Technology")
+                        .institution("Vietnam National University")
+                        .yearOfGraduation(2013)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+        counselor1.setCertifications(List.of(
+                Certification.builder()
+                        .name("Certified Ethical Hacker (CEH)")
+                        .organization("EC-Council")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build(),
+                Certification.builder()
+                        .name("Certified Information Systems Security Professional (CISSP)")
+                        .organization("(ISC)²")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+
+        // Tạo Male counselor - Nguyễn Văn Hoàng
+        Counselor counselor2 = createAcademicCounselor(0, Gender.MALE, "Nguyễn Văn Hung", isMajor, counselingSlots, "hungnv");
+        counselor2 = counselorRepository.findById(counselor2.getId()).get();
+
+        counselor2.setAchievements("Discovered multiple zero-day vulnerabilities in web applications.\n"
+                + "Built a security testing framework now used by several startups.");
+        counselor2.setWorkHistory("Application Security Engineer at KMS Technology (2018–Present):\n"
+                + "- Performed penetration testing and vulnerability assessments on enterprise applications.\n"
+                + "- Automated security testing in CI/CD pipelines.\n\n"
+                + "Security Consultant at PwC (2015–2018):\n"
+                + "- Assisted clients in developing secure software development lifecycles (SDLC).\n"
+                + "- Delivered workshops on secure coding practices.");
+        counselor2.setSpecializedSkills("Application Security\n"
+                + "Penetration Testing\n"
+                + "Vulnerability Assessment\n"
+                + "Secure Software Development Lifecycle (SDLC).");
+        counselor2.setOtherSkills("Strong problem-solving skills\n"
+                + "Public speaking\n"
+                + "Fluent in Vietnamese, English, and basic German.");
+        counselor2.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("Bachelor")
+                        .fieldOfStudy("Cybersecurity")
+                        .institution("HCMC University of Technology")
+                        .yearOfGraduation(2015)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+        counselor2.setCertifications(List.of(
+                Certification.builder()
+                        .name("Offensive Security Certified Professional (OSCP)")
+                        .organization("Offensive Security")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build(),
+                Certification.builder()
+                        .name("Certified Secure Software Lifecycle Professional (CSSLP)")
+                        .organization("(ISC)²")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+
+        counselorRepository.save(counselor1);
+        counselorRepository.save(counselor2);
+    }
+
+    @Transactional
+    private void createDigitalMarketingDepartmentCounselor(List<CounselingSlot> counselingSlots) {
+        Major dmMajor = majorRepository
+                .findByName("Digital Marketing")
+                .orElseThrow(() -> new NotFoundException("Not found Digital Marketing major"));
+
+        // Tạo Female counselor - Nguyễn Thị Mai Linh
+        Counselor counselor1 = createAcademicCounselor(0, Gender.FEMALE, "Nguyễn Thị Mai Linh", dmMajor, counselingSlots, "linhnm");
+        counselor1 = counselorRepository.findById(counselor1.getId()).get();
+
+        counselor1.setAchievements("Launched successful campaigns for 50+ clients, with an average 30% increase in social media engagement.\n"
+                + "Winner of 'Best Content Strategy' award at the Vietnam Marketing Summit 2023.");
+        counselor1.setWorkHistory("Social Media Strategist at Tiktok Vietnam (2019–Present):\n"
+                + "- Designed content calendars and executed social media campaigns.\n"
+                + "- Increased follower count by 200% across major platforms.\n\n"
+                + "Content Creator at Shopee (2016–2019):\n"
+                + "- Created engaging content for e-commerce audiences.\n"
+                + "- Partnered with influencers to enhance brand visibility.");
+        counselor1.setSpecializedSkills("Social Media Marketing\n"
+                + "Content Creation\n"
+                + "Influencer Marketing\n"
+                + "Campaign Management.");
+        counselor1.setOtherSkills("Creative thinking\n"
+                + "Strong collaboration skills\n"
+                + "Fluent in Vietnamese and English.");
+        counselor1.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("Bachelor")
+                        .fieldOfStudy("Marketing and Communication")
+                        .institution("HCMC University of Social Sciences and Humanities")
+                        .yearOfGraduation(2015)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+        counselor1.setCertifications(List.of(
+                Certification.builder()
+                        .name("Facebook Certified Digital Marketing Associate")
+                        .organization("Meta")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build(),
+                Certification.builder()
+                        .name("Content Marketing Specialist (HubSpot)")
+                        .organization("HubSpot Academy")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+
+        // Tạo Male counselor - Trần Quốc Khánh
+        Counselor counselor2 = createAcademicCounselor(0, Gender.MALE, "Trần Quốc Khánh", dmMajor, counselingSlots, "khanhtq");
+        counselor2 = counselorRepository.findById(counselor2.getId()).get();
+
+        counselor2.setAchievements("Managed SEO for 100+ clients, achieving top rankings for competitive keywords.\n"
+                + "Generated $1M in ad revenue through targeted PPC campaigns in 2022.");
+        counselor2.setWorkHistory("SEO Specialist at Google Vietnam (2020–Present):\n"
+                + "- Improved organic traffic by 50% for 30+ clients.\n"
+                + "- Optimized on-page and off-page SEO strategies.\n\n"
+                + "PPC Campaign Manager at Lazada (2017–2020):\n"
+                + "- Managed a $2M advertising budget effectively.\n"
+                + "- Achieved 300% ROI on high-performing campaigns.");
+        counselor2.setSpecializedSkills("Search Engine Optimization (SEO)\n"
+                + "Pay-Per-Click Advertising (PPC)\n"
+                + "Google Analytics\n"
+                + "Keyword Research.");
+        counselor2.setOtherSkills("Data analysis\n"
+                + "Attention to detail\n"
+                + "Fluent in Vietnamese and English.");
+        counselor2.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("Bachelor")
+                        .fieldOfStudy("Business Administration")
+                        .institution("RMIT Vietnam")
+                        .yearOfGraduation(2014)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+        counselor2.setCertifications(List.of(
+                Certification.builder()
+                        .name("Google Ads Search Certification")
+                        .organization("Google")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build(),
+                Certification.builder()
+                        .name("SEO Certified Professional (Yoast)")
+                        .organization("Yoast Academy")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+
+        counselorRepository.save(counselor1);
+        counselorRepository.save(counselor2);
+    }
+
+    @Transactional
+    private void createInternationalBusinessDepartmentCounselor(List<CounselingSlot> counselingSlots) {
+        Major ibMajor = majorRepository
+                .findByName("International Business")
+                .orElseThrow(() -> new NotFoundException("Not found International Business major"));
+
+        // Tạo Female counselor - Lê Thu Trang
+        Counselor counselor1 = createAcademicCounselor(0, Gender.FEMALE, "Lê Thu Trang", ibMajor, counselingSlots, "tranglt");
+        counselor1 = counselorRepository.findById(counselor1.getId()).get();
+
+        counselor1.setAchievements("Successfully led market entry projects in 10+ countries, achieving 20% higher-than-expected market share in 3 years.\n"
+                + "Published 5 research papers on cross-cultural business negotiations.");
+        counselor1.setWorkHistory("International Market Strategist at Deloitte (2018–Present):\n"
+                + "- Advised Fortune 500 companies on global market entry.\n"
+                + "- Conducted workshops on cross-cultural business strategies.\n\n"
+                + "Consultant at McKinsey & Company (2015–2018):\n"
+                + "- Delivered strategies for market expansion in Asia-Pacific.\n"
+                + "- Worked with C-level executives to improve negotiation outcomes.");
+        counselor1.setSpecializedSkills("Global Market Entry Strategies\n"
+                + "Cross-Cultural Negotiations\n"
+                + "Strategic Planning\n"
+                + "International Business Development.");
+        counselor1.setOtherSkills("Strong interpersonal communication\n"
+                + "Public speaking\n"
+                + "Fluent in English, Vietnamese, and Mandarin.");
+        counselor1.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("Master")
+                        .fieldOfStudy("International Business Management")
+                        .institution("London Business School")
+                        .yearOfGraduation(2014)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+        counselor1.setCertifications(List.of(
+                Certification.builder()
+                        .name("Certified International Trade Professional (CITP)")
+                        .organization("Forum for International Trade Training (FITT)")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build(),
+                Certification.builder()
+                        .name("Cross-Cultural Business Communication Specialist")
+                        .organization("Cultural Intelligence Center")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+
+        // Tạo Male counselor - Phạm Quang Huy
+        Counselor counselor2 = createAcademicCounselor(0, Gender.MALE, "Phạm Quang Huy", ibMajor, counselingSlots, "huypq");
+        counselor2 = counselorRepository.findById(counselor2.getId()).get();
+
+        counselor2.setAchievements("Streamlined global supply chains for 20+ companies, reducing costs by 15% on average.\n"
+                + "Authored a guide on international trade compliance for ASEAN exporters.");
+        counselor2.setWorkHistory("Supply Chain Manager at Samsung Electronics (2017–Present):\n"
+                + "- Led global supply chain optimization projects.\n"
+                + "- Collaborated with customs authorities to ensure compliance.\n\n"
+                + "Trade Compliance Officer at Maersk Line (2013–2017):\n"
+                + "- Managed import/export documentation for high-value shipments.\n"
+                + "- Trained teams on international trade regulations.");
+        counselor2.setSpecializedSkills("International Trade Compliance\n"
+                + "Supply Chain Management\n"
+                + "Logistics Optimization\n"
+                + "Customs Clearance.");
+        counselor2.setOtherSkills("Analytical thinking\n"
+                + "Problem-solving\n"
+                + "Fluent in Vietnamese and English.");
+        counselor2.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("Master")
+                        .fieldOfStudy("Global Supply Chain Management")
+                        .institution("University of Melbourne")
+                        .yearOfGraduation(2013)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+        counselor2.setCertifications(List.of(
+                Certification.builder()
+                        .name("Customs Compliance Certification (CCP)")
+                        .organization("International Compliance Professionals Association (ICPA)")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build(),
+                Certification.builder()
+                        .name("Certified Supply Chain Professional (CSCP)")
+                        .organization("APICS")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+
+        counselorRepository.save(counselor1);
+        counselorRepository.save(counselor2);
+    }
+
+    @Transactional
+    private void createFinanceDepartmentCounselor(List<CounselingSlot> counselingSlots) {
+        Major financeMajor = majorRepository
+                .findByName("Finance")
+                .orElseThrow(() -> new NotFoundException("Not found Finance major"));
+
+        // Tạo Female counselor - Nguyễn Thị Mai
+        Counselor counselor1 = createAcademicCounselor(0, Gender.FEMALE, "Nguyễn Thị Mai", financeMajor, counselingSlots, "mainn");
+        counselor1 = counselorRepository.findById(counselor1.getId()).get();
+
+        counselor1.setAchievements("Managed a portfolio worth $100M with an annualized return of 12% over 5 years.\n"
+                + "Authored 3 white papers on quantitative portfolio optimization strategies.");
+        counselor1.setWorkHistory("Portfolio Manager at BlackRock (2015–Present):\n"
+                + "- Managed diversified investment portfolios for high-net-worth clients.\n"
+                + "- Developed data-driven investment strategies to optimize returns.\n\n"
+                + "Equity Analyst at JP Morgan (2012–2015):\n"
+                + "- Conducted market research and analyzed equity performance trends.\n"
+                + "- Prepared investment recommendations for institutional clients.");
+        counselor1.setSpecializedSkills("Portfolio Optimization\n"
+                + "Equity Research\n"
+                + "Investment Strategy Development\n"
+                + "Financial Market Analysis.");
+        counselor1.setOtherSkills("Data analysis\n"
+                + "Critical thinking\n"
+                + "Fluent in Vietnamese, English, and French.");
+        counselor1.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("Master")
+                        .fieldOfStudy("Finance and Investment")
+                        .institution("University of Cambridge")
+                        .yearOfGraduation(2011)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+        counselor1.setCertifications(List.of(
+                Certification.builder()
+                        .name("Chartered Financial Analyst (CFA)")
+                        .organization("CFA Institute")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build(),
+                Certification.builder()
+                        .name("Certified Investment Management Analyst (CIMA)")
+                        .organization("Investment Management Consultants Association (IMCA)")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+
+        // Tạo Male counselor - Trần Văn Hùng
+        Counselor counselor2 = createAcademicCounselor(0, Gender.MALE, "Trần Văn Hùng", financeMajor, counselingSlots, "hungtv");
+        counselor2 = counselorRepository.findById(counselor2.getId()).get();
+
+        counselor2.setAchievements("Reduced financial risk exposure by 15% through robust risk management frameworks.\n"
+                + "Advised Fortune 500 companies on optimizing capital structure.");
+        counselor2.setWorkHistory("Risk Manager at HSBC (2016–Present):\n"
+                + "- Designed comprehensive risk mitigation strategies for corporate clients.\n"
+                + "- Conducted financial stress tests to evaluate risk exposure.\n\n"
+                + "Corporate Finance Analyst at KPMG (2013–2016):\n"
+                + "- Provided strategic financial advice for mergers and acquisitions.\n"
+                + "- Analyzed financial statements to improve cost efficiency.");
+        counselor2.setSpecializedSkills("Corporate Finance Analysis\n"
+                + "Risk Management\n"
+                + "Capital Budgeting\n"
+                + "Mergers and Acquisitions.");
+        counselor2.setOtherSkills("Problem-solving\n"
+                + "Strong interpersonal skills\n"
+                + "Fluent in Vietnamese and English.");
+        counselor2.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("Master")
+                        .fieldOfStudy("Corporate Finance")
+                        .institution("London School of Economics")
+                        .yearOfGraduation(2012)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+        counselor2.setCertifications(List.of(
+                Certification.builder()
+                        .name("Financial Risk Manager (FRM)")
+                        .organization("Global Association of Risk Professionals (GARP)")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build(),
+                Certification.builder()
+                        .name("Certified Management Accountant (CMA)")
+                        .organization("Institute of Management Accountants (IMA)")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+
+        counselorRepository.save(counselor1);
+        counselorRepository.save(counselor2);
+    }
+
+    @Transactional
+    private void createMultimediaCommunicationCounselor(List<CounselingSlot> counselingSlots) {
+        Major multimediaMajor = majorRepository
+                .findByName("Multimedia Communication")
+                .orElseThrow(() -> new NotFoundException("Not found Multimedia Communication major"));
+
+        // Tạo Female counselor - Lê Thị Phương Anh
+        Counselor counselor1 = createAcademicCounselor(0, Gender.FEMALE, "Lê Thị Phương Anh", multimediaMajor, counselingSlots, "phuonganhlt");
+        counselor1 = counselorRepository.findById(counselor1.getId()).get();
+
+        counselor1.setAchievements("Successfully managed over 50 digital marketing campaigns with a 20% increase in engagement rates.\n"
+                + "Published 10 articles on storytelling techniques in top-tier media journals.");
+        counselor1.setWorkHistory("Digital Marketing Manager at Ogilvy Vietnam (2017–Present):\n"
+                + "- Developed creative content strategies for multinational brands.\n"
+                + "- Oversaw a team of 10 content creators for high-impact campaigns.\n\n"
+                + "Content Strategist at Dentsu Aegis Network (2014–2017):\n"
+                + "- Conducted market research to enhance digital storytelling.\n"
+                + "- Pioneered innovative approaches in social media engagement.");
+        counselor1.setSpecializedSkills("Digital Storytelling\n"
+                + "Content Strategy Development\n"
+                + "Brand Marketing\n"
+                + "Social Media Optimization.");
+        counselor1.setOtherSkills("Public speaking\n"
+                + "Creative writing\n"
+                + "Fluent in Vietnamese, English, and Spanish.");
+        counselor1.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("Master")
+                        .fieldOfStudy("Digital Communication")
+                        .institution("University of Southern California")
+                        .yearOfGraduation(2013)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+        counselor1.setCertifications(List.of(
+                Certification.builder()
+                        .name("Certified Content Marketing Specialist (CCMS)")
+                        .organization("Digital Marketing Institute")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build(),
+                Certification.builder()
+                        .name("Storytelling in the Digital Age")
+                        .organization("New York University")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+
+        // Tạo Male counselor - Nguyễn Văn Hoàng
+        Counselor counselor2 = createAcademicCounselor(0, Gender.MALE, "Nguyễn Văn Hoàng", multimediaMajor, counselingSlots, "hoangnv");
+        counselor2 = counselorRepository.findById(counselor2.getId()).get();
+
+        counselor2.setAchievements("Directed over 20 successful TV commercials for top-tier brands.\n"
+                + "Recipient of the 'Best VFX in Commercials' award in 2021.");
+        counselor2.setWorkHistory("VFX Supervisor at MPC Film (2018–Present):\n"
+                + "- Led post-production teams for high-budget film projects.\n"
+                + "- Developed cutting-edge visual effects workflows.\n\n"
+                + "Media Producer at Saatchi & Saatchi (2014–2018):\n"
+                + "- Managed end-to-end production for multimedia advertisements.\n"
+                + "- Collaborated with clients to ensure brand alignment.");
+        counselor2.setSpecializedSkills("Media Production\n"
+                + "Visual Effects (VFX)\n"
+                + "Post-Production Management\n"
+                + "Cinematography.");
+        counselor2.setOtherSkills("Problem-solving\n"
+                + "Team leadership\n"
+                + "Fluent in Vietnamese and English.");
+        counselor2.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("Bachelor")
+                        .fieldOfStudy("Film and Television Production")
+                        .institution("New York Film Academy")
+                        .yearOfGraduation(2012)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+        counselor2.setCertifications(List.of(
+                Certification.builder()
+                        .name("Adobe Certified Professional in Video Design")
+                        .organization("Adobe")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build(),
+                Certification.builder()
+                        .name("Advanced VFX Techniques")
+                        .organization("Gnomon School of Visual Effects")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+
+        counselorRepository.save(counselor1);
+        counselorRepository.save(counselor2);
+    }
+
+    @Transactional
+    private void createEnglishLanguageCounselor(List<CounselingSlot> counselingSlots) {
+        Major englishMajor = majorRepository
+                .findByName("English Language")
+                .orElseThrow(() -> new NotFoundException("Not found English Language major"));
+
+        // Tạo Female counselor - Nguyễn Thị Minh Châu
+        Counselor counselor1 = createAcademicCounselor(0, Gender.FEMALE, "Nguyễn Thị Minh Châu", englishMajor, counselingSlots, "chauntm");
+        counselor1 = counselorRepository.findById(counselor1.getId()).get();
+
+        counselor1.setAchievements("Taught over 1000 hours of ESL courses to international students.\n"
+                + "Helped students achieve high scores on IELTS and TOEFL exams.");
+        counselor1.setWorkHistory("ESL Instructor at British Council (2015–Present):\n"
+                + "- Conducted courses focused on academic English and professional communication.\n"
+                + "- Trained students for IELTS and TOEFL exams.\n\n"
+                + "TESOL Educator at University of Cambridge (2012–2015):\n"
+                + "- Developed language training programs for non-native speakers.\n"
+                + "- Led workshops on academic writing skills.");
+        counselor1.setSpecializedSkills("ESL Teaching\n"
+                + "IELTS/TOEFL Preparation\n"
+                + "Academic Writing\n"
+                + "Pronunciation and Speaking.");
+        counselor1.setOtherSkills("Cross-cultural communication\n"
+                + "Fluent in Vietnamese and English.");
+        counselor1.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("Master")
+                        .fieldOfStudy("Applied Linguistics")
+                        .institution("University of Cambridge")
+                        .yearOfGraduation(2012)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+        counselor1.setCertifications(List.of(
+                Certification.builder()
+                        .name("CELTA - Certificate in Teaching English to Speakers of Other Languages")
+                        .organization("University of Cambridge")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build(),
+                Certification.builder()
+                        .name("TESOL - Teaching English to Speakers of Other Languages")
+                        .organization("TESOL International Association")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor1)
+                        .build()
+        ));
+
+        // Tạo Male counselor - Trần Minh Tùng
+        Counselor counselor2 = createAcademicCounselor(0, Gender.MALE, "Trần Minh Tùng", englishMajor, counselingSlots, "tungtm");
+        counselor2 = counselorRepository.findById(counselor2.getId()).get();
+
+        counselor2.setAchievements("Published 5 academic papers on English Literature.\n"
+                + "Guest speaker at international linguistics conferences.");
+        counselor2.setWorkHistory("Professor of English Literature at Hanoi University (2010–Present):\n"
+                + "- Teaches courses on English literature and literary analysis.\n"
+                + "- Guides students on research projects related to literary theory.\n\n"
+                + "Linguistics Researcher at Vietnam National University (2005–2010):\n"
+                + "- Conducted studies on English phonetics and semantics.\n"
+                + "- Developed academic material for linguistics courses.");
+        counselor2.setSpecializedSkills("English Literature\n"
+                + "Linguistics\n"
+                + "Literary Theory\n"
+                + "Phonetics and Semantics.");
+        counselor2.setOtherSkills("Research and publication\n"
+                + "Mentoring students\n"
+                + "Fluent in Vietnamese and English.");
+        counselor2.setQualifications(List.of(
+                Qualification.builder()
+                        .degree("PhD")
+                        .fieldOfStudy("English Literature")
+                        .institution("University of London")
+                        .yearOfGraduation(2005)
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+        counselor2.setCertifications(List.of(
+                Certification.builder()
+                        .name("Master's in English Literature")
+                        .organization("University of London")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build(),
+                Certification.builder()
+                        .name("PhD in Linguistics")
+                        .organization("University of London")
+                        .imageUrl("https://www.agile42.com/en/wp-content/uploads/sites/2/2024/07/CSP-SM_grey.png")
+                        .counselor(counselor2)
+                        .build()
+        ));
+
+        counselorRepository.save(counselor1);
+        counselorRepository.save(counselor2);
+    }
+
+    @Transactional
     private void seedCounselorAccounts() {
         List<CounselingSlot> counselingSlots = counselingSlotRepository.findAll();
 
@@ -1320,6 +2053,13 @@ public class DatabaseSeeder implements CommandLineRunner {
 
         // academic
         createITDepartmentCounselor(counselingSlots);
+        createAIDepartmentCounselor(counselingSlots);
+        createISDepartmentCounselor(counselingSlots);
+        createDigitalMarketingDepartmentCounselor(counselingSlots);
+        createInternationalBusinessDepartmentCounselor(counselingSlots);
+        createFinanceDepartmentCounselor(counselingSlots);
+        createMultimediaCommunicationCounselor(counselingSlots);
+        createEnglishLanguageCounselor(counselingSlots);
     }
 
     private Counselor createAcademicCounselor(int index, Gender gender, String fullName, Major major, List<CounselingSlot> counselingSlots, String counselorEmail) {
@@ -1333,11 +2073,13 @@ public class DatabaseSeeder implements CommandLineRunner {
         if (accountRepository.findAccountByEmail(counselorEmail).isEmpty()) {
             logger.info("Academic counselor account does not exist. Creating new account for specialization '{}'.", major.getName());
 
+            counselorEmail += "@gmail.com";
+
             Account counselor = Account.builder()
                     .email(counselorEmail)
                     .role(Role.ACADEMIC_COUNSELOR)
                     .status(Status.ACTIVE)
-                    .password(passwordEncoder.encode("c"))
+                    .password(passwordEncoder.encode("112233"))
                     .build();
 
             accountRepository.save(counselor);
@@ -1350,13 +2092,13 @@ public class DatabaseSeeder implements CommandLineRunner {
                             ? "https://png.pngtree.com/png-vector/20230903/ourmid/pngtree-man-avatar-isolated-png-image_9935819.png"
                             : "https://static.vecteezy.com/system/resources/thumbnails/004/899/680/small/beautiful-blonde-woman-with-makeup-avatar-for-a-beauty-salon-illustration-in-the-cartoon-style-vector.jpg") // Set a default avatar
                     .dateOfBirth(LocalDate.of(1980 + index % 10, 1, 1).atStartOfDay(ZoneId.systemDefault()).toInstant().toEpochMilli())
-                    .rating(BigDecimal.valueOf(0))
+//                    .rating(BigDecimal.valueOf(0))
                     .gender(gender) // Adjust as needed
 //                    .specialization(specialization)
                     .major(major)
                     .department(major.getDepartment())
                     .status(CounselorStatus.AVAILABLE)
-                    .counselingSlots(counselorSlots)
+//                    .counselingSlots(counselorSlots)
                     .academicDegree("Thạc sĩ") // Adjust degree as needed
                     .build();
 
@@ -1386,11 +2128,13 @@ public class DatabaseSeeder implements CommandLineRunner {
         if (accountRepository.findAccountByEmail(counselorEmail).isEmpty()) {
             logger.info("Non-academic counselor account does not exist. Creating new account for expertise '{}'.", expertise.getName());
 
+            counselorEmail += "@gmail.com";
+
             Account counselor = Account.builder()
                     .email(counselorEmail)
                     .role(Role.NON_ACADEMIC_COUNSELOR)
                     .status(Status.ACTIVE)
-                    .password(passwordEncoder.encode("c"))
+                    .password(passwordEncoder.encode("112233"))
                     .build();
 
             accountRepository.save(counselor);
@@ -1403,12 +2147,12 @@ public class DatabaseSeeder implements CommandLineRunner {
                             ? "https://png.pngtree.com/png-vector/20230903/ourmid/pngtree-man-avatar-isolated-png-image_9935819.png"
                             : "https://static.vecteezy.com/system/resources/thumbnails/004/899/680/small/beautiful-blonde-woman-with-makeup-avatar-for-a-beauty-salon-illustration-in-the-cartoon-style-vector.jpg") // Set a default avatar
                     .dateOfBirth(LocalDate.of(1980 + index % 10, 1, 1).atStartOfDay(ZoneId.systemDefault()).toInstant().toEpochMilli())
-                    .rating(BigDecimal.valueOf(0))
+//                    .rating(BigDecimal.valueOf(0))
                     .gender(gender) // Adjust as needed
                     .expertise(expertise)
                     .industryExperience(5) // Set an example for industry experience
                     .status(CounselorStatus.AVAILABLE)
-                    .counselingSlots(counselorSlots)
+//                    .counselingSlots(counselorSlots)
                     .build();
 
             AvailableDateRange availableDateRange = createAvailableDateRangeFromTodayToTwoMonths(counselorProfile);
@@ -1470,29 +2214,29 @@ public class DatabaseSeeder implements CommandLineRunner {
         return dailySlots;
     }
 
-    private void createOnlineCounselingAppointment(CounselingAppointmentRequest appointmentRequest) {
-        OnlineAppointment appointment = OnlineAppointment.builder()
-                .startDateTime(LocalDateTime.of(appointmentRequest.getRequireDate(), appointmentRequest.getStartTime()))
-                .endDateTime(LocalDateTime.of(appointmentRequest.getRequireDate(), appointmentRequest.getEndTime()))
-                .status(CounselingAppointmentStatus.ATTEND)
-                .appointmentRequest(appointmentRequest)
-                .meetUrl("hehehehe")
-                .build();
-
-        counselingAppointmentRepository.save(appointment);
-    }
-
-    private void createOfflineCounselingAppointment(CounselingAppointmentRequest appointmentRequest) {
-        OfflineAppointment appointment = OfflineAppointment.builder()
-                .startDateTime(LocalDateTime.of(appointmentRequest.getRequireDate(), appointmentRequest.getStartTime()))
-                .endDateTime(LocalDateTime.of(appointmentRequest.getRequireDate(), appointmentRequest.getEndTime()))
-                .status(CounselingAppointmentStatus.WAITING)
-                .appointmentRequest(appointmentRequest)
-                .address("hahaha")
-                .build();
-
-        counselingAppointmentRepository.save(appointment);
-    }
+//    private void createOnlineCounselingAppointment(CounselingAppointmentRequest appointmentRequest) {
+//        OnlineAppointment appointment = OnlineAppointment.builder()
+//                .startDateTime(LocalDateTime.of(appointmentRequest.getRequireDate(), appointmentRequest.getStartTime()))
+//                .endDateTime(LocalDateTime.of(appointmentRequest.getRequireDate(), appointmentRequest.getEndTime()))
+//                .status(CounselingAppointmentStatus.ATTEND)
+//                .appointmentRequest(appointmentRequest)
+//                .meetUrl("hehehehe")
+//                .build();
+//
+//        counselingAppointmentRepository.save(appointment);
+//    }
+//
+//    private void createOfflineCounselingAppointment(CounselingAppointmentRequest appointmentRequest) {
+//        OfflineAppointment appointment = OfflineAppointment.builder()
+//                .startDateTime(LocalDateTime.of(appointmentRequest.getRequireDate(), appointmentRequest.getStartTime()))
+//                .endDateTime(LocalDateTime.of(appointmentRequest.getRequireDate(), appointmentRequest.getEndTime()))
+//                .status(CounselingAppointmentStatus.WAITING)
+//                .appointmentRequest(appointmentRequest)
+//                .address("hahaha")
+//                .build();
+//
+//        counselingAppointmentRepository.save(appointment);
+//    }
 
     public void seedSlots() {
         LocalTime startTime = LocalTime.of(8, 0); // Bắt đầu lúc 08:00 sáng
@@ -1715,52 +2459,644 @@ public class DatabaseSeeder implements CommandLineRunner {
 
     private final ContributionQuestionCardService questionCardService;
     private final ContributedQuestionCardCategoryRepository categoryRepository;
-private void seedCategories() {
-    // Tạo các category nếu chưa có
-    if (categoryRepository.count() == 0) {
-        ContributedQuestionCardCategory academicCategory = new ContributedQuestionCardCategory();
-        academicCategory.setName("Academic");
-        academicCategory.setType(ContributedQuestionCardCategory.Type.ACADEMIC);
-        categoryRepository.save(academicCategory);
 
-        ContributedQuestionCardCategory nonAcademicCategory = new ContributedQuestionCardCategory();
-        nonAcademicCategory.setName("Non-Academic");
-        nonAcademicCategory.setType(ContributedQuestionCardCategory.Type.NON_ACADEMIC);
-        categoryRepository.save(nonAcademicCategory);
+    private void seedCategories() {
+        // Tạo các category nếu chưa có
+        if (categoryRepository.count() == 0) {
+            // Tạo category cho Software
+            ContributedQuestionCardCategory softwareCategory = new ContributedQuestionCardCategory();
+            softwareCategory.setName("Software");
+            softwareCategory.setType(ContributedQuestionCardCategory.Type.ACADEMIC);
+            categoryRepository.save(softwareCategory);
+
+            // Tạo category cho Artificial Intelligence
+            ContributedQuestionCardCategory aiCategory = new ContributedQuestionCardCategory();
+            aiCategory.setName("Artificial Intelligence");
+            aiCategory.setType(ContributedQuestionCardCategory.Type.ACADEMIC);
+            categoryRepository.save(aiCategory);
+
+            // Tạo category cho Business
+            ContributedQuestionCardCategory businessCategory = new ContributedQuestionCardCategory();
+            businessCategory.setName("Business");
+            businessCategory.setType(ContributedQuestionCardCategory.Type.ACADEMIC);
+            categoryRepository.save(businessCategory);
+
+            // Tạo category cho Stress Management
+            ContributedQuestionCardCategory stressCategory = new ContributedQuestionCardCategory();
+            stressCategory.setName("Stress Management");
+            stressCategory.setType(ContributedQuestionCardCategory.Type.NON_ACADEMIC);
+            categoryRepository.save(stressCategory);
+
+            // Tạo category cho Peer Pressure
+            ContributedQuestionCardCategory peerPressureCategory = new ContributedQuestionCardCategory();
+            peerPressureCategory.setName("Peer Pressure");
+            peerPressureCategory.setType(ContributedQuestionCardCategory.Type.NON_ACADEMIC);
+            categoryRepository.save(peerPressureCategory);
+        }
     }
-}
 
-    // Seed Questions
-    private void seedQuestions() {
-        // Get categories from DB
+    private void seedQuestionsAndAttachWithCategory() {
+        // Lấy danh sách categories từ DB
         List<ContributedQuestionCardCategory> categories = categoryRepository.findAll();
 
         if (!categories.isEmpty()) {
-            // Đảm bảo rằng có ít nhất 3 category
-            ContributedQuestionCardCategory academicCategory = categories.stream()
-                    .filter(c -> c.getType() == ContributedQuestionCardCategory.Type.ACADEMIC)
+            // Lấy các category
+            ContributedQuestionCardCategory softwareCategory = categories.stream()
+                    .filter(c -> c.getName().equals("Software"))
                     .findFirst().orElseThrow();
-            ContributedQuestionCardCategory nonAcademicCategory = categories.stream()
-                    .filter(c -> c.getType() == ContributedQuestionCardCategory.Type.NON_ACADEMIC)
+            ContributedQuestionCardCategory aiCategory = categories.stream()
+                    .filter(c -> c.getName().equals("Artificial Intelligence"))
+                    .findFirst().orElseThrow();
+            ContributedQuestionCardCategory businessCategory = categories.stream()
+                    .filter(c -> c.getName().equals("Business"))
+                    .findFirst().orElseThrow();
+            ContributedQuestionCardCategory stressCategory = categories.stream()
+                    .filter(c -> c.getName().equals("Stress Management"))
+                    .findFirst().orElseThrow();
+            ContributedQuestionCardCategory peerPressureCategory = categories.stream()
+                    .filter(c -> c.getName().equals("Peer Pressure"))
                     .findFirst().orElseThrow();
 
-            // Seed Questions for each category
-            seedQuestionsForCategory(academicCategory);
-            seedQuestionsForCategory(nonAcademicCategory);
+            // Seed Questions cho từng category
+            seedQuestionsForCategory(softwareCategory, Arrays.asList(
+                    "What is the difference between supervised and unsupervised learning?",
+                    "How does a neural network learn patterns in data?",
+                    "What is the role of APIs in software integration?",
+                    "How do databases ensure data consistency and integrity?",
+                    "Explain the concept of cloud computing and its impact on business.",
+                    "Describe the process of DevOps and its importance."
+            ), Arrays.asList(
+                    "Supervised vs Unsupervised Learning",
+                    "Neural Network Basics",
+                    "APIs in Software Integration",
+                    "Database Integrity",
+                    "Cloud Computing in Business",
+                    "DevOps Essentials"
+            ));
+
+            seedQuestionsForCategory(aiCategory, Arrays.asList(
+                    "What are the key features of a neural network?",
+                    "Explain the concept of overfitting in machine learning.",
+                    "What is the difference between AI and Machine Learning?",
+                    "How does deep learning differ from traditional machine learning?",
+                    "What are the challenges of implementing AI in real-world applications?",
+                    "How does AI contribute to automation in industries?"
+            ), Arrays.asList(
+                    "Neural Network Features",
+                    "Overfitting in AI",
+                    "AI vs Machine Learning",
+                    "Deep Learning vs Traditional ML",
+                    "Challenges in AI Implementation",
+                    "AI in Automation"
+            ));
+
+            seedQuestionsForCategory(businessCategory, Arrays.asList(
+                    "What is the significance of cloud computing in modern business?",
+                    "How does digital marketing impact business growth?",
+                    "What are the key elements of a business model canvas?",
+                    "What are the common challenges in data migration for businesses?",
+                    "Explain the importance of financial forecasting in business planning.",
+                    "What are the advantages of CRM systems in business?"
+            ), Arrays.asList(
+                    "Cloud Computing in Business",
+                    "Impact of Digital Marketing",
+                    "Business Model Canvas",
+                    "Data Migration Challenges",
+                    "Financial Forecasting Basics",
+                    "CRM Systems in Business"
+            ));
+
+            seedQuestionsForCategory(stressCategory, Arrays.asList(
+                    "What strategies can be used to manage stress among students?",
+                    "How does peer pressure affect mental health in schools?",
+                    "What are the signs of anxiety in students and how can they be addressed?",
+                    "Describe the importance of physical activity for mental health in students.",
+                    "How can schools promote healthy eating habits among students?"
+            ), Arrays.asList(
+                    "Managing Student Stress",
+                    "Peer Pressure and Mental Health",
+                    "Addressing Anxiety in Students",
+                    "Physical Activity for Mental Health",
+                    "Promoting Healthy Eating"
+            ));
+
+            seedQuestionsForCategory(peerPressureCategory, Arrays.asList(
+                    "How does peer pressure affect mental health in schools?",
+                    "What are the signs of anxiety in students and how can they be addressed?",
+                    "How can students cope with peer pressure effectively?",
+                    "What role do teachers play in helping students deal with peer pressure?",
+                    "Describe the impact of peer pressure on academic performance."
+            ), Arrays.asList(
+                    "Peer Pressure and Mental Health",
+                    "Addressing Anxiety in Students",
+                    "Coping with Peer Pressure",
+                    "Teachers' Role in Peer Pressure",
+                    "Peer Pressure and Academic Performance"
+            ));
         }
     }
 
-    // Seed Questions for a specific category
-    private void seedQuestionsForCategory(ContributedQuestionCardCategory category) {
-        Counselor counselor = counselorRepository.findAll().getFirst();
-        for (int i = 1; i <= 3; i++) {
-            String questionText = "Sample question " + i + " for " + category.getName();
-            String answerText = "Sample answer " + i + " for " + category.getName();
+    private void seedQuestionsForCategory(ContributedQuestionCardCategory category, List<String> questions, List<String> titles) {
+        Counselor counselor = counselorRepository.findAll().get(0); // Chọn counselor
+
+        // Tạo câu hỏi và gán vào category
+        for (int i = 0; i < questions.size(); i++) {
+            String questionText = questions.get(i);
+            String titleText = titles.get(i);
+            String answerText = "Sample answer for: " + questionText;
 
             // Tạo câu hỏi cho category này
-            questionCardService.createContributionQuestionCard(questionText, answerText,
-                    category.getId(), counselor.getId()); // CounselorId giả định là 1L cho mỗi câu hỏi
+            questionCardService.createContributionQuestionCard(
+                    questionText,
+                    answerText,
+                    category.getId(),
+                    counselor.getId(),
+                    titleText
+            );
         }
+    }
+
+//    private final EntityManager entityManager;
+
+//    @Transactional
+    private void batchSaveStudentStudy(List<StudentStudy> studentStudies) {
+        // Chia list thành các batch nhỏ và lưu từng batch
+        for (int i = 0; i < studentStudies.size(); i += BATCH_SIZE) {
+            int endIndex = Math.min(i + BATCH_SIZE, studentStudies.size()); // Tính toán index cuối cùng của batch
+            List<StudentStudy> batch = studentStudies.subList(i, endIndex);
+            studentStudyRepository.saveAll(batch);  // Lưu batch
+
+            // Flush và clear sau mỗi batch để giải phóng bộ nhớ
+            studentStudyRepository.flush();
+        }
+        // Sau khi lưu tất cả dữ liệu, clear danh sách để chuẩn bị cho sinh viên tiếp theo
+        studentStudies.clear();
+    }
+
+    private final StudentSynchronizeService studentSynchronizeService;
+
+    @Transactional
+    private void seedStudentStudy() {
+        List<Student> students = studentRepository.findAll();
+        List<StudentStudy> studentStudies = new ArrayList<>();
+
+        for(Student student : students) {
+//            String url = fapServerUrl + "/api/students/" + "study/all-semester/" + student.getStudentCode();
+//            AttendanceDTO[] attendanceDTOS = restTemplate.getForObject(url, AttendanceDTO[].class);
+//            if(attendanceDTOS != null) {
+//                for(AttendanceDTO dto : attendanceDTOS) {
+//                    Semester semester = semesterRepository.findByName(dto.getSemesterName()).orElseThrow(() -> new NotFoundException("Not Found Semester For Syn StudentStudy"));
+//                    StudentStudy studentStudy = StudentStudyMapper.toStudentStudy(dto, student, semester);
+//                    studentStudies.add(studentStudy);
+//                }
+//
+//                if(!studentStudies.isEmpty()) {
+//                    batchSaveStudentStudy(studentStudies);
+//                }
+//            }
+            studentSynchronizeService.syncOneStudent(student.getStudentCode());
+        }
+
+//        ResponseEntity<StudentFapResponseDTO[]> response = restTemplate.getForEntity(fapServerUrl + "/api/students", StudentFapResponseDTO[].class);
+//
+//        if (response.getBody() != null) {
+//            List<StudentFapResponseDTO> studentDTOs = List.of(response.getBody());
+//
+//            for (StudentFapResponseDTO studentFapResponseDTO : studentDTOs) {
+//                studentSynchronizeService.syncOneStudent(studentFapResponseDTO.getStudentCode());
+//            }
+//        }
+    }
+
+    private final AcademicCounselorRepository academicCounselorRepository;
+    private final NonAcademicCounselorRepository nonAcademicCounselorRepository;
+    private final QuestionCardDocumentRepository questionCardDocumentRepository;
+    private final OpenAIService openAIService;
+
+    private void seedAllQuestionCards() {
+        seedQuestionCardForPsychologyCounselor();
+        seedQuestionCardForHealthCounselor();
+        seedQuestionCardForCareerCounselor();
+        seedQuestionCardForSoftwareEngineeringCounselor();
+        seedQuestionCardForArtificialIntelligenceCounselor();
+        seedQuestionCardForInternationalBusinessCounselor();
+        seedQuestionCardForFinanceCounselor();
+    }
+
+
+    private void createQuestionCards(
+            Counselor counselor,
+            List<Student> students,
+            String[] titles,
+            String[] contents,
+            String[] answers, // Add answers parameter
+            QuestionType questionType,
+            QuestionCard.QuestionCarDifficultyLevel difficultyLevel) {
+
+        if (titles.length != contents.length || titles.length != answers.length) {
+            throw new IllegalArgumentException("Titles, contents, and answers arrays must have the same length.");
+        }
+
+        for (int i = 0; i < titles.length; i++) {
+            QuestionCard questionCard = QuestionCard.builder()
+                    .title(titles[i])
+                    .content(contents[i])
+                    .answer(answers[i]) // Assign the answer to the question card
+                    .questionType(questionType)
+                    .difficultyLevel(difficultyLevel)
+                    .status(QuestionCardStatus.VERIFIED)
+                    .isClosed(true)
+                    .publicStatus(QuestionCard.PublicStatus.VISIBLE)
+                    .closedDate(LocalDateTime.now())
+                    .counselor(counselor)
+                    .student(students.get((int) (Math.random() * students.size())))
+                    .build();
+            questionCardRepository.save(questionCard);
+
+            // Create random feedback for the QuestionCard
+            int randomRating = (int) (1 + Math.random() * 5); // Random integer rating between 1 and 5
+            String feedbackComment = "This is a generated feedback comment for the question card.";
+
+            QuestionCardFeedback feedback = QuestionCardFeedback.builder()
+                    .rating(BigDecimal.valueOf(randomRating))
+                    .comment(feedbackComment)
+                    .questionCard(questionCard)
+                    .counselor(counselor)
+                    .build();
+            questionCardFeedbackRepository.save(feedback);
+
+            // Lấy vector embedding cho question và title từ OpenAI API
+            List<Double> questionVectorDouble = openAIService.getEmbeddingFromOpenAPI(contents[i]);
+            List<Double> titleVectorDouble = openAIService.getEmbeddingFromOpenAPI(titles[i]);
+
+            // Chuyển đổi Double -> Float
+            List<Float> questionVector = questionVectorDouble.stream()
+                    .map(Double::floatValue)
+                    .toList();
+            List<Float> titleVector = titleVectorDouble.stream()
+                    .map(Double::floatValue)
+                    .toList();
+
+            // Tạo QuestionCardDocument cho Elasticsearch và lưu vào Elasticsearch
+            QuestionCardDocument questionCardDocument = QuestionCardDocument.builder()
+                    .id(String.valueOf(questionCard.getId())) // ID from the QuestionCard
+                    .sortingId(questionCard.getId())
+                    .title(titles[i])
+                    .content(contents[i])
+                    .answer(answers[i]) // Answers for the document
+                    .questionType(questionType.name()) // Converting enum to string
+                    .difficultyLevel(difficultyLevel.name()) // Converting enum to string
+                    .closedDate(questionCard.getClosedDate()) // The current date for the created time
+                    .counselorId(String.valueOf(counselor.getId())) // Counselor ID
+                    .studentId(String.valueOf(students.get((int) (Math.random() * students.size())).getId())) // Randomly select student ID
+                    .contentVector(questionVector)
+                    .titleVector(titleVector)
+                    .build();
+            questionCardDocumentRepository.save(questionCardDocument);
+        }
+    }
+
+    private void seedQuestionCardForPsychologyCounselor() {
+        NonAcademicCounselor psychologyCounselor = nonAcademicCounselorRepository.findAll()
+                .stream()
+                .filter(counselor -> counselor.getExpertise().getName().equals("School Psychologist"))
+                .findFirst().orElseThrow(() -> new NotFoundException("Not found Psychology counselor for seeding"));
+
+        List<Student> students = studentRepository.findAll();
+        String[] titles = {
+                "How to manage exam stress?",
+                "How to deal with anxiety before a big test?",
+                "Tips for improving focus during study sessions.",
+                "Effective ways to build self-confidence.",
+                "Dealing with peer pressure in school."
+        };
+        String[] contents = {
+                "I am really stressed out due to exams. Can you provide some tips to manage it effectively?",
+                "I feel very anxious before tests. How can I overcome this?",
+                "I want to improve my focus during study sessions. What strategies can I use?",
+                "I lack self-confidence and struggle to speak up in class. Any advice?",
+                "My friends often pressure me into things I don't want to do. How do I handle it?"
+        };
+        String[] answers = {
+                "Try deep breathing exercises, time management, and regular breaks to reduce stress.",
+                "Practice relaxation techniques like meditation and focus on positive thoughts.",
+                "Use techniques like the Pomodoro method or eliminate distractions during study time.",
+                "Start by setting small goals and practicing self-affirmation.",
+                "Learn to say no and prioritize your own values and beliefs."
+        };
+
+        createQuestionCards(psychologyCounselor, students, titles, contents, answers, QuestionType.NON_ACADEMIC, QuestionCard.QuestionCarDifficultyLevel.Medium);
+    }
+
+    private void seedQuestionCardForHealthCounselor() {
+        NonAcademicCounselor healthCounselor = nonAcademicCounselorRepository.findAll()
+                .stream()
+                .filter(counselor -> counselor.getExpertise().getName().equals("School Health Advisor"))
+                .findFirst().orElseThrow(() -> new NotFoundException("Not found Health counselor for seeding"));
+
+        List<Student> students = studentRepository.findAll();
+        String[] titles = {
+                "How to maintain a healthy diet?",
+                "Best practices for staying fit as a student.",
+                "How to avoid burnout from studying too much?",
+                "Ways to improve sleep quality.",
+                "How to recover from sickness quickly?"
+        };
+        String[] contents = {
+                "I want to improve my diet as a student. Any suggestions?",
+                "What are some exercises I can do to stay fit?",
+                "I often feel tired from studying too much. How do I avoid burnout?",
+                "I have trouble sleeping well at night. Can you help?",
+                "What steps can I take to recover quickly after falling sick?"
+        };
+        String[] answers = {
+                "Eat a balanced diet with a variety of fruits, vegetables, and proteins.",
+                "Try exercises like jogging, swimming, or yoga to stay active.",
+                "Take regular breaks, exercise, and maintain a work-life balance.",
+                "Establish a relaxing bedtime routine and avoid screen time before sleep.",
+                "Stay hydrated, eat nutritious food, and rest as much as possible."
+        };
+
+        createQuestionCards(healthCounselor, students, titles, contents, answers, QuestionType.NON_ACADEMIC, QuestionCard.QuestionCarDifficultyLevel.Easy);
+    }
+
+    private void seedQuestionCardForCareerCounselor() {
+        NonAcademicCounselor careerCounselor = nonAcademicCounselorRepository.findAll()
+                .stream()
+                .filter(counselor -> counselor.getExpertise().getName().equals("Career Counseling"))
+                .findFirst().orElseThrow(() -> new NotFoundException("Not found Career counselor for seeding"));
+
+        List<Student> students = studentRepository.findAll();
+        String[] titles = {
+                "How to choose the right career path?",
+                "Tips for writing an effective resume.",
+                "How to prepare for job interviews?",
+                "Skills that employers value the most.",
+                "How to network effectively as a student?"
+        };
+        String[] contents = {
+                "I am unsure about my career path. Can you guide me?",
+                "What are some tips for creating an effective resume?",
+                "How do I prepare for job interviews to make a good impression?",
+                "What skills do employers look for in fresh graduates?",
+                "How can I network effectively while still in school?"
+        };
+        String[] answers = {
+                "Consider your interests, skills, and values. Research different industries.",
+                "Tailor your resume to highlight relevant skills and experience for the job.",
+                "Practice common interview questions and showcase your strengths.",
+                "Employers value communication, problem-solving, and teamwork skills.",
+                "Attend career fairs, join student organizations, and connect on LinkedIn."
+        };
+
+        createQuestionCards(careerCounselor, students, titles, contents, answers, QuestionType.NON_ACADEMIC, QuestionCard.QuestionCarDifficultyLevel.Hard);
+    }
+
+    private void seedQuestionCardForSoftwareEngineeringCounselor() {
+        AcademicCounselor softwareEngineeringCounselor = academicCounselorRepository.findAll()
+                .stream()
+                .filter(counselor -> counselor.getMajor().getName().equals("Software Engineering"))
+                .findFirst().orElseThrow(() -> new NotFoundException("Not found SE counselor for seeding"));
+
+        List<Student> students = studentRepository.findAll();
+        String[] titles = {
+                "How to learn object-oriented programming effectively?",
+                "What are the best practices for writing clean code?",
+                "How to debug code efficiently?",
+                "What is the best way to prepare for software engineering exams?",
+                "How to manage group projects in software development?"
+        };
+        String[] contents = {
+                "I struggle with understanding object-oriented programming. Can you help?",
+                "What are some tips for writing clean and maintainable code?",
+                "I often get stuck while debugging. Any advice?",
+                "How do I effectively prepare for exams in software engineering?",
+                "Group projects are challenging. How can I manage them better?"
+        };
+        String[] answers = {
+                "Start with understanding the four pillars of OOP: encapsulation, inheritance, abstraction, and polymorphism.",
+                "Use meaningful variable names, follow SOLID principles, and write unit tests.",
+                "Use a systematic approach: isolate the issue, check logs, and use a debugger.",
+                "Review past exams, understand key concepts, and practice coding problems.",
+                "Divide tasks, set clear deadlines, and use version control to track progress."
+        };
+
+        createQuestionCards(softwareEngineeringCounselor, students, titles, contents, answers, QuestionType.ACADEMIC, QuestionCard.QuestionCarDifficultyLevel.Medium);
+    }
+
+    private void seedQuestionCardForArtificialIntelligenceCounselor() {
+        AcademicCounselor artificialIntelligenceCounselor = academicCounselorRepository.findAll()
+                .stream()
+                .filter(counselor -> counselor.getMajor().getName().equals("Artificial Intelligence"))
+                .findFirst().orElseThrow(() -> new NotFoundException("Not found AI counselor for seeding"));
+
+        List<Student> students = studentRepository.findAll();
+        String[] titles = {
+                "How to get started with machine learning?",
+                "What are the best algorithms for classification tasks?",
+                "How do I improve the performance of a neural network?",
+                "What resources should I use to learn deep learning?",
+                "How do I approach AI project development?"
+        };
+        String[] contents = {
+                "I'm new to machine learning. Where should I begin?",
+                "Which classification algorithms should I focus on?",
+                "My neural network isn't performing well. What should I do?",
+                "Can you recommend deep learning courses or books?",
+                "I need guidance on how to structure an AI project."
+        };
+        String[] answers = {
+                "Start with the basics: learn about supervised vs unsupervised learning and linear regression.",
+                "Focus on algorithms like Logistic Regression, Decision Trees, and Support Vector Machines.",
+                "Try tuning hyperparameters, use more data, or experiment with different architectures.",
+                "Deep Learning with Python by François Chollet and online courses on platforms like Coursera.",
+                "Define the problem, gather and preprocess data, choose the right model, and evaluate its performance."
+        };
+
+        createQuestionCards(artificialIntelligenceCounselor, students, titles, contents, answers, QuestionType.ACADEMIC, QuestionCard.QuestionCarDifficultyLevel.Medium);
+    }
+
+    private void seedQuestionCardForInternationalBusinessCounselor() {
+        AcademicCounselor internationalBusinessCounselor = academicCounselorRepository.findAll()
+                .stream()
+                .filter(counselor -> counselor.getMajor().getName().equals("International Business"))
+                .findFirst().orElseThrow(() -> new NotFoundException("Not found IB counselor for seeding"));
+
+        List<Student> students = studentRepository.findAll();
+        String[] titles = {
+                "How do I prepare for a career in international business?",
+                "What are the key challenges in managing cross-cultural teams?",
+                "How do global economic trends affect international business?",
+                "What skills are most important for international business professionals?",
+                "How do I succeed in international negotiations?"
+        };
+        String[] contents = {
+                "I'm interested in international business but don't know where to start. Any advice?",
+                "How do I manage teams from different cultural backgrounds?",
+                "How do I keep track of the latest global economic developments?",
+                "Which skills should I focus on developing for a career in international business?",
+                "I'm new to international negotiations. How should I prepare?"
+        };
+        String[] answers = {
+                "Start by learning the basics of global trade, economics, and business laws.",
+                "Be aware of cultural differences, communicate openly, and foster respect among team members.",
+                "Stay updated with global news, attend webinars, and follow key economic indicators.",
+                "Focus on communication, cultural awareness, negotiation, and problem-solving skills.",
+                "Prepare by understanding the cultural context, being flexible, and building rapport."
+        };
+
+        createQuestionCards(internationalBusinessCounselor, students, titles, contents, answers, QuestionType.ACADEMIC, QuestionCard.QuestionCarDifficultyLevel.Medium);
+    }
+
+    private void seedQuestionCardForFinanceCounselor() {
+        AcademicCounselor financeCounselor = academicCounselorRepository.findAll()
+                .stream()
+                .filter(counselor -> counselor.getMajor().getName().equals("Finance"))
+                .findFirst().orElseThrow(() -> new NotFoundException("Not found Finance counselor for seeding"));
+
+        List<Student> students = studentRepository.findAll();
+        String[] titles = {
+                "How should I start learning about financial analysis?",
+                "What are the best strategies for personal financial planning?",
+                "How do I approach investment management?",
+                "What are the key financial ratios I should focus on?",
+                "How can I prepare for a career in corporate finance?"
+        };
+        String[] contents = {
+                "I'm new to finance and need guidance on where to start. Any tips?",
+                "What are the main steps in creating a solid financial plan?",
+                "How do I begin learning about investment management?",
+                "Which financial ratios are essential for evaluating a company?",
+                "I'm interested in corporate finance. How can I prepare for this career?"
+        };
+        String[] answers = {
+                "Start by learning the basics of accounting, financial statements, and cash flow analysis.",
+                "Begin with setting clear goals, budgeting, saving, and investing wisely.",
+                "Understand different types of investments, risk tolerance, and portfolio diversification.",
+                "Focus on ratios like the current ratio, return on equity (ROE), and debt-to-equity ratio.",
+                "Study corporate financial management, risk analysis, and learn financial modeling techniques."
+        };
+
+        createQuestionCards(financeCounselor, students, titles, contents, answers, QuestionType.ACADEMIC, QuestionCard.QuestionCarDifficultyLevel.Medium);
+    }
+
+    private void seedAppointment() {
+        List<CounselingSlot> slots = getCounselingSlots(); // Assume slots are pre-fetched
+        List<Student> students = getStudents(); // Assume students are pre-fetched
+        List<Counselor> counselors = getCounselors(); // Assume counselors are pre-fetched
+
+        Random random = new Random();
+        List<CounselingAppointmentRequest> requests = new ArrayList<>();
+        List<CounselingAppointment> appointments = new ArrayList<>();
+        List<AppointmentFeedback> feedbacks = new ArrayList<>();
+
+        int[] absentCounts = {0, 0, 0}; // Track absent count for each month
+
+        // Create 50 requests
+        for (int i = 0; i < 50; i++) {
+            // Determine status (3 denies per month)
+            boolean isDenied = (i % 17 == 0) || (i % 18 == 0) || (i % 19 == 0); // Spread 3 denies each month
+            CounselingAppointmentRequestStatus status = isDenied ? CounselingAppointmentRequestStatus.DENIED : CounselingAppointmentRequestStatus.APPROVED;
+            MeetingType meetingType = (i % 3 == 0) ? MeetingType.OFFLINE : MeetingType.ONLINE;
+
+            // Randomize request dates across 3 months
+            int monthIndex = i < 20 ? 0 : (i < 35 ? 1 : 2);
+            LocalDate baseDate = LocalDate.now().minusMonths(monthIndex);
+            LocalDate requestDate = baseDate.minusDays(random.nextInt(30));
+
+            CounselingAppointmentRequest request = CounselingAppointmentRequest.builder()
+                    .requireDate(requestDate)
+                    .startTime(slots.get(i % slots.size()).getStartTime())
+                    .endTime(slots.get(i % slots.size()).getEndTime())
+                    .status(status)
+                    .meetingType(meetingType)
+                    .reason("Reason for request " + (i + 1))
+                    .counselor(counselors.get(random.nextInt(8)))
+                    .student(students.get(random.nextInt(15)))
+                    .build();
+            requests.add(request);
+
+            // Create appointments only for approved requests
+            if (status == CounselingAppointmentRequestStatus.APPROVED) {
+                CounselingAppointment appointment;
+                if (meetingType == MeetingType.ONLINE) {
+                    appointment = OnlineAppointment.builder()
+                            .meetUrl("https://meet.example.com/session" + i)
+                            .build();
+                } else {
+                    appointment = OfflineAppointment.builder()
+                            .address("Room " + (i + 1))
+                            .build();
+                }
+
+                appointment.setStartDateTime(LocalDateTime.of(request.getRequireDate(), request.getStartTime()));
+                appointment.setEndDateTime(LocalDateTime.of(request.getRequireDate(), request.getEndTime()));
+                appointment.setMeetingType(request.getMeetingType());
+                appointment.setCounselor(request.getCounselor());
+                appointment.setStudent(request.getStudent());
+                appointment.setReason(request.getReason());
+
+                // Set status: 2 absent per month, rest are attend
+                if (absentCounts[monthIndex] < 2) {
+                    appointment.setStatus(CounselingAppointmentStatus.ABSENT);
+                    absentCounts[monthIndex]++;
+                } else {
+                    appointment.setStatus(CounselingAppointmentStatus.ATTEND);
+                }
+
+                appointment.setAppointmentRequest(request);
+                appointments.add(appointment);
+
+                // Generate feedback for the appointment
+                BigDecimal rating = BigDecimal.valueOf(1 + random.nextInt(5));
+                String comment = switch (rating.intValue()) {
+                    case 1 -> "Very dissatisfied";
+                    case 2 -> "Dissatisfied";
+                    case 3 -> "Neutral";
+                    case 4 -> "Satisfied";
+                    case 5 -> "Very satisfied";
+                    default -> "No comment";
+                };
+
+                AppointmentFeedback feedback = AppointmentFeedback.builder()
+                        .rating(rating)
+                        .comment(comment)
+                        .appointment(appointment)
+                        .counselor(request.getCounselor())
+                        .build();
+                feedbacks.add(feedback);
+            }
+        }
+
+        saveRequests(requests);
+        saveAppointments(appointments);
+        saveFeedbacks(feedbacks);
+    }
+
+    private List<CounselingSlot> getCounselingSlots() {
+        return counselingSlotRepository.findAll();
+    }
+
+    private List<Student> getStudents() {
+        return studentRepository.findAll();
+    }
+
+    private List<Counselor> getCounselors() {
+        return counselorRepository.findAll();
+    }
+
+    private void saveRequests(List<CounselingAppointmentRequest> requests) {
+        counselingAppointmentRequestRepository.saveAll(requests);
+    }
+
+    private void saveAppointments(List<CounselingAppointment> appointments) {
+        counselingAppointmentRepository.saveAll(appointments);
+    }
+
+    private final AppointmentFeedbackRepository appointmentFeedbackRepository;
+
+    private void saveFeedbacks(List<AppointmentFeedback> feedbacks) {
+        appointmentFeedbackRepository.saveAll(feedbacks);
     }
 
 }
